index vertical scroll

--- a/post.html
+++ b/post.html
@@ -1,6 +1,7 @@
-<!doctype html> <html>
+<!doctype html>
+<html>
 	<head>
-		<title>Lorem ipsum dolor sit amet</title>
+		<title>Lorem ipsum dolor sit amet | Subway Prototype</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="css/base.css"/>
@@ -10,14 +11,14 @@
 		<div>
 			<div class="wrapper">
 				<nav>
-					<div class="title-wrapper">
+					<div class="titleWrapper">
 						<h1 class="title">Lorem ipsum dolor sit amet</h1>
 						<span class="date">May 1, 2024</span>
 					</div>
 					<div class="separator"></div>
-					<button id="navigationToggle"></button>
+					<button id="navigationToggle" class="centerSelf"></button>
 				</nav>
-				<div>
+				<main>
 					<div id="navigation">
 						<ul id="siteLinks">
 							<li class="prepared"><a href="/">Home</a></li>
@@ -81,7 +82,7 @@
 						</ul>
 						<figure class="highlight text"><table><tr><td class="gutter"><pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br><span class="line">4</span><br><span class="line">5</span><br><span class="line">6</span><br></pre></td><td class="code"><pre><span class="line">#include &lt;stdio.h&gt;</span><br><span class="line"></span><br><span class="line">int main(void) &#123;</span><br><span class="line">    printf(&quot;hello world&quot;);</span><br><span class="line">    return 0;</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure>
 					</article>
-				</div>
+				</main>
 			</div>
 		</div>
 	</body>
