--- a/post.html
+++ b/post.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="css/base.css"/>
 		<link rel="stylesheet" href="css/post.css"/>
+		<link rel="prefetch" href="js/navigation.js"/>
+		<link rel="preload" as="image" href="assets/menu_light.svg"/>
+		<link rel="preload" as="image" href="assets/close.svg"/>
+		<link rel="preload" as="image" href="assets/close_light.svg"/>
 	</head>
 	<body>
 		<div>
