--- a/post.html
+++ b/post.html
@@ -7,9 +7,6 @@
 		<link rel="stylesheet" href="css/base.css"/>
 		<link rel="stylesheet" href="css/post.css"/>
 		<link rel="prefetch" href="js/navigation.js"/>
-		<link rel="preload" as="image" href="assets/menu_light.svg"/>
-		<link rel="preload" as="image" href="assets/close.svg"/>
-		<link rel="preload" as="image" href="assets/close_light.svg"/>
 	</head>
 	<body>
 		<div>
@@ -91,4 +88,5 @@
 		</div>
 	</body>
 	<script type="text/javascript" src="js/navigation.js"></script>
+	<script type="text/javascript" src="js/copyCode.js"></script>
 </html>
