leaving animation & a11y: navigationToggle

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<h1 class="title">Subway Prototype</h1>
 					</div>
 					<div class="separator"></div>
-					<button id="navigationToggle"></button>
+					<button id="navigationToggle" aria-label="Activate this to toggle navigation. 激活此按钮以切换站点导航。"></button>
 				</header>
 				<main>
 					<nav id="navigation">
@@ -44,4 +44,5 @@
 		</div>
 	</body>
 	<script type="text/javascript" src="/js/navigation.js"></script>
+	<script type="text/javascript" src="/js/leaving.js"></script>
 </html>
