--- a/index.html
+++ b/index.html
@@ -44,5 +44,5 @@
 		</div>
 	</body>
 	<script type="text/javascript" src="/js/navigation.js"></script>
-	<script type="text/javascript" src="/js/leaving.js"></script>
+	<script type="text/javascript" src="/js/anchor.js"></script>
 </html>
